reume in progress

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="resume-form-container">
-    <h1>STATIC RESUME BUILDER</h1>
+    <h1>RESUME BUILDER</h1>
   <form id="resume-form">
 
     <fieldset>
